# rinha-backend-2025

./: Cargo.toml  Dockerfile  docker-compose.yml  nginx.conf
src/: controller.rs  controllers.rs  main.rs  routes.rs
