[package]
name = "rinha-backend-2025"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
serde = "1.0.219"
tokio = { version = "1.47.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
sea-orm = { version = "1.1.14", features = [
    "runtime-tokio-rustls",
    "sqlx-postgres",
] }
