[package]
name = "rinha-backend-2025"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.47.1", features = ["full"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
redis = { version = "0.32.4", features = ["tokio-comp"] }
reqwest = { version = "0.12.22", features = ["json"] }
